// Copyright 2024 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.notification;
option go_package = "github.com/bucketeer-io/bucketeer/proto/notification";

message Recipient {
  enum Type { SlackChannel = 0; }
  enum Language {
    ENGLISH = 0;
    JAPANESE = 1;
  }
  Type type = 1;
  SlackChannelRecipient slack_channel_recipient = 2;
  Language language = 3;
}

message SlackChannelRecipient {
  string webhook_url = 1;
}